--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1, h2, h3 {
     position: fixed;
     z-index: -1;
     /* Velo de color verde olivo (#4B4B34) para unificar con la paleta de la web */
-    background-image: linear-gradient(rgba(75, 75, 52, 0.5), rgba(75, 75, 52, 0.5)), url('../images/portadaA.jpg');
+    background-image: linear-gradient(rgba(75, 75, 52, 0.5), rgba(75, 75, 52, 0.5)), url('../images/portadaC.jpg');
     background-size: cover;
     background-position: 50% 80%;
     top: 0;
